# mygita/src/features/identity/contract.js
@@ -4,9 +4,12 @@
 /** @typedef {{id:string, personalDetails:PersonalDetails, onboarding?:{state:string}, roles?:string[]}} User */
 /** @typedef {{challengeId:string,expiresInSeconds:number}} OtpChallenge */
 /** @typedef {{user:User,isNewUser:boolean}} AuthenticationResult */
+/** @typedef {{username:string,password:string}} PasswordCredentials */
 /**
  * @typedef {Object} IdentityRepository
  * @property {() => Promise<User|null>} getCurrentUser
+ * @property {(credentials:PasswordCredentials) => Promise<AuthenticationResult>} createPasswordAccount
+ * @property {(credentials:PasswordCredentials) => Promise<AuthenticationResult>} loginWithPassword
  * @property {(mobile:string) => Promise<OtpChallenge>} requestOtp
  * @property {(challengeId:string,otp:string) => Promise<AuthenticationResult>} verifyOtp
  * @property {(profile:Partial<PersonalDetails>) => Promise<User>} completeOnboarding
